# TestTonic

./: .env  .env.example  Cargo.toml  build.rs
proto/: template.proto
src/: client.rs  main.rs
src/server/: grpc_server.rs
src/usecases/config/: proto.rs
src/usecases/handler/: template.rs
src/usecases/handlers/: template.rs
