[package]
name = "tonic-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "client"
path = "src/client.rs"


[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.10"
prost = "0.12"
log = "0.4"
dotenv = "0.15"
env_logger = "0.10"

[build-dependencies]
tonic-build = "0.10"
